# PurlawFrontend

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/purlaw_backend/: CMakeLists.txt  clipper.cpp  cvhelper.cpp  cvhelper.h  sherpa_helper.cpp  sherpa_helper.h
android/app/src/main/cpp/purlaw_backend/3rdpart/ncnn/lib/cmake/ncnn/: ncnn.cmake
android/app/src/main/cpp/purlaw_backend/ocrmodel/: paddleocr_keys.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  oss_licenses.dart
lib/common/: constants.dart
lib/common/constants/: constants.dart  eula.dart
lib/common/network/: chat_api.dart  network_loading_state.dart  network_request.dart
lib/common/provider/: provider_widget.dart
lib/common/utils/: cache_utils.dart  log_utils.dart  misc.dart
lib/common/utils/database/: database_util.dart  kvstore.dart
lib/components/: multi_state_widget.dart
lib/components/purlaw/: appbar.dart  button.dart  chat_message_block.dart  dialogs.dart  expandable_text.dart  purlaw_components.dart  search_bar.dart  tabbar.dart  text_field.dart  waterfall_list.dart
lib/local_example/: local_example_video_category.dart
lib/method_channels/: document_recognition.dart  method_channels.dart  speech_to_text.dart
lib/models/: theme_model.dart
lib/models/account_mgr/: user_info_model.dart
lib/models/ai_chat/: chat_message_model.dart
lib/models/community/: short_video_comment_model.dart  short_video_info_model.dart
lib/viewmodels/: base_viewmodel.dart  main_page_viewmodel.dart  main_viewmodel.dart  theme_viewmodel.dart
lib/viewmodels/account_mgr/: account_login_viewmodel.dart  account_page_viewmodel.dart  account_register_viewmodel.dart  account_video_list_viewmodel.dart  account_visit_viewmodel.dart
lib/viewmodels/ai_chat_page/: ai_document_recognition_viewmodel.dart  chat_history_viewmodel.dart  chat_page_viewmodel.dart  chat_session_list_viewmodel.dart  chat_voice_recognition_viewmodel.dart
lib/viewmodels/community/: short_video_comment_viewmodel.dart  short_video_list_viewmodel.dart  short_video_play_viewmodel.dart  short_video_search_viewmodel.dart  short_video_upload_viewmodel.dart
lib/viewmodels/utilities/: contract_generation_viewmodel.dart  similar_cases_viewmodel.dart
lib/views/: main_page.dart
lib/views/account_mgr/: account_login.dart  account_management.dart  account_register.dart  account_visit_page.dart  my_account_avatar.dart  my_account_detail.dart  my_account_page.dart
lib/views/ai_chat_page/: ai_chat_page.dart  ai_document_recognition.dart  chat_history_page.dart  chat_page_voice_recognition.dart  chat_session_list_page.dart
lib/views/community/: community_category_page.dart  community_page.dart  community_search_page.dart
lib/views/oobe/: oobe.dart
lib/views/settings/: SettingsPage.dart  settings_page.dart
lib/views/utilities/: utilities_index_page.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
test/unit_test/account_mgr/: account_login_test.dart  account_register_test.dart
test/unit_test/ai_chat/: chat_page_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+18 files in other folders)
